修正：修正：reset.css位置

--- a/hw1/index.html
+++ b/hw1/index.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/hw1/css/reset.css">
-	<link rel="stylesheet" href="/hw1/css/index.css">
+	<link rel="stylesheet" href="../reset.css">
+	<link rel="stylesheet" href="./css/index.css">
 	<title>主線1</title>
 </head>
 
@@ -13,7 +13,7 @@
 	<section class="banner">
 		<div class="container">
 			<h1 class="banner-title font-weight">VITO</h1>
-			<img class="banner-img" src="./image/vito.png" alt="引形象圖">
+			<img class="banner-img" src="./image/vito.png" alt="形象圖">
 			<h2 class="banner-title font-weight w-50 ml-auto">RESUME</h2>
 		</div>
 	</section>
@@ -93,9 +93,11 @@
 	</section>
 	<footer>
 		<ul class="icon-group">
-			<li><a href="#"><img src="/hw1/image/fb.png" alt="b"></a></li><!--
-			--><li><a href="#"><img src="/hw1/image/instagram.png" alt="ig"></a></li><!--
-			--><li><a href="#"><img src="/hw1/image/line.png" alt="line"></a></li>
+			<li><a href="#"><img src="./image/fb.png" alt="b"></a></li><!--
+			-->
+			<li><a href="#"><img src="./image/instagram.png" alt="ig"></a></li><!--
+			-->
+			<li><a href="#"><img src="/image/line.png" alt="line"></a></li>
 		</ul>
 	</footer>
 </body>
