修正: line-icon路徑

--- a/hw1/index.html
+++ b/hw1/index.html
@@ -97,7 +97,7 @@
 			-->
 			<li><a href="#"><img src="./image/instagram.png" alt="ig"></a></li><!--
 			-->
-			<li><a href="#"><img src="/image/line.png" alt="line"></a></li>
+			<li><a href="#"><img src="./image/line.png" alt="line"></a></li>
 		</ul>
 	</footer>
 </body>
