--- a/hw1/kata/practice1.html
+++ b/hw1/kata/practice1.html
@@ -5,62 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../../reset.css">
+  <link rel="stylesheet" href="./practice1.css">
   <title>練習1</title>
-  <style>
-    *,
-    *::before,
-    *::after {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    section {
-      width: 640px;
-      margin: 0 auto;
-      background-color: #f5f5f5;
-    }
-
-    .mb-24 {
-      margin-bottom: 24px;
-    }
-
-    .me-20 {
-      margin: 0 20px;
-    }
-
-    .articles {
-      display: flex;
-      justify-content: space-between;
-    }
-
-    .container li {
-      display: flex;
-    }
-
-    h2 {
-      width: 288px;
-      font-size: 20px;
-      line-height: 1.2;
-    }
-
-    .words {
-      width: 288px;
-      font-size: 16px;
-      line-height: 1.5;
-    }
-
-    footer {
-      display: flex;
-      height: 120px;
-      font-size: 16px;
-      line-height: 1.5;
-    }
-
-    footer p{
-      margin: auto;
-    }
-  </style>
 </head>
 
 <body>
