fin: nav & header

--- a/hw2/index.html
+++ b/hw2/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../reset.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/index.css">
   <title>主線二</title>
 </head>
+
 <body>
-  
+  <!-- 1296 gap-24 -->
+  <nav class="nav-routing bg-black">
+    <div class="container max-width-1296">
+      <ul class="d-flex justify-content-between margin-padding-0 fs-6 lh-base text-white">
+        <Ll class="d-flex align-items-center margin-padding-0">WILLIAM LEE</Ll>
+        <Ll class="d-flex align-items-center margin-padding-0">BASED IN TAIWAN</Ll>
+        <Ll class="d-flex align-items-center margin-padding-0">CURRENTLY FRONT END <br />ENGINEER AT HEXSCHOOL
+        </Ll>
+        <Ll class="d-flex align-items-center margin-padding-0">CONTACT ME</Ll>
+      </ul>
+    </div>
+  </nav>
+  <header class="header-py bg-black">
+    <div class="container p-0 max-width-1296 d-flex justify-content-between">
+      <img class="me-4" src="./image/people.png" alt="形象圖">
+      <div>
+        <h2 class="short-introduce">Hi</h2>
+        <h2 class="short-introduce">I’m a front-end <br/>developer</h2>
+        <h1 class="william">William</h1>
+        <button type="button">
+          <a href="#">contact me</a>
+          <img src="" alt="前往 contact me">
+        </button>
+      </div>
+    </div>
+  </header>
 </body>
+
 </html>
