--- a/hw2/index.html
+++ b/hw2/index.html
@@ -14,26 +14,26 @@
 <body>
   <!-- 1296 gap-24 -->
   <nav class="nav-routing bg-black">
-    <div class="container max-width-1296">
-      <ul class="d-flex justify-content-between margin-padding-0 fs-6 lh-base text-white">
-        <Ll class="d-flex align-items-center margin-padding-0">WILLIAM LEE</Ll>
-        <Ll class="d-flex align-items-center margin-padding-0">BASED IN TAIWAN</Ll>
-        <Ll class="d-flex align-items-center margin-padding-0">CURRENTLY FRONT END <br />ENGINEER AT HEXSCHOOL
+    <div class="container">
+      <ul class="p-0 mb-0 text-d1d1d1 d-flex justify-content-between align-items-center">
+        <Ll class="">WILLIAM LEE</Ll>
+        <Ll class="">BASED IN TAIWAN</Ll>
+        <Ll class="">CURRENTLY FRONT END <br />ENGINEER AT HEXSCHOOL
         </Ll>
-        <Ll class="d-flex align-items-center margin-padding-0">CONTACT ME</Ll>
+        <Ll class="">CONTACT ME</Ll>
       </ul>
     </div>
   </nav>
   <header class="header-py bg-black">
-    <div class="container p-0 max-width-1296 d-flex justify-content-between">
-      <img class="me-4" src="./image/people.png" alt="形象圖">
-      <div>
-        <h2 class="short-introduce">Hi</h2>
-        <h2 class="short-introduce">I’m a front-end <br/>developer</h2>
-        <h1 class="william">William</h1>
-        <button type="button">
-          <a href="#">contact me</a>
-          <img src="" alt="前往 contact me">
+    <div class="container d-flex justify-content-between">
+      <img src="./image/people.png" alt="形象圖">
+      <div class="contact-me-pt">
+        <h2 class="display-3 text-fff mb-0">Hi</h2>
+        <h2 class="display-3 text-fff mb-0">I’m a front-end <br/>developer</h2>
+        <h1 class="h1-william text-end mb-0">William</h1>
+        <button type="button" class="ms-auto bg-white btn d-flex">
+          <a href="#" class="fs-6 me-1">contact me</a>
+          <img src="./image/arrow_outward.png" alt="前往 contact me">
         </button>
       </div>
     </div>
