--- a/hw2/index.html
+++ b/hw2/index.html
@@ -29,7 +29,7 @@
       <img src="./image/people.png" alt="形象圖">
       <div class="contact-me-pt">
         <h2 class="display-3 text-fff mb-0">Hi</h2>
-        <h2 class="display-3 text-fff mb-0">I’m a front-end <br/>developer</h2>
+        <h2 class="display-3 text-fff mb-0">I’m a front-end <br />developer</h2>
         <h1 class="h1-william text-end mb-0">William</h1>
         <button type="button" class="ms-auto bg-white btn d-flex">
           <a href="#" class="fs-6 me-1">contact me</a>
@@ -38,6 +38,27 @@
       </div>
     </div>
   </header>
+  <section class="bg-set-introduction">
+    <div class="container d-flex justify-content-between">
+      <div class="introduction">
+        <h2 class="display-3 text-fff h2-mb-36px mb-0">Introduction</h2>
+        <p class="fs-4 text-fff intro">Hi, I'm William Lee, a Front-End Developer with a passion for building beautiful
+          and
+          responsive websites that
+          provide an optimal user experience.</p>
+        <div class="d-flex">
+          <img src="./image/sparkle-sm.png" alt="裝飾背景">
+          <img class="mx-3" src="./image/sparkle-sm.png" alt="裝飾背景">
+          <img src="./image/sparkle-sm.png" alt="裝飾背景">
+        </div>
+      </div>
+      <div class="introduction-img-group d-flex justify-content-between">
+        <img src="./image//sparkle.png" alt="裝飾背景">
+        <img src="./image/photographer.png" alt="裝飾背景">
+        <img src="./image/people-2.png" alt="裝飾背景">
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
