--- a/hw2/index.html
+++ b/hw2/index.html
@@ -59,6 +59,41 @@
       </div>
     </div>
   </section>
+  <section>
+    <div class="container">
+      <div>
+        <ul>
+          <li>
+            <span>01</span>
+            <h3>Attention to Detail</h3>
+            <p>Meticulous code analysis and optimization.</p>
+          </li>
+          <li>
+            <span>02</span>
+            <h3>Adaptability</h3>
+            <p>Swift learning of new technologies.
+            </p>
+          </li>
+          <li>
+            <span>03</span>
+            <h3>Team Player</h3>
+            <p>Identifying and resolving issues.</p>
+          </li>
+          <li>
+            <span>04</span>
+            <h3>Problem Solver</h3>
+            <p>Collaborates and shares ideas.</p>
+          </li>
+        </ul>
+      </div>
+      <div>
+        <h2>About Me</h2>
+        <p>With over 5 years of experience, I'm proficient in HTML, CSS, JavaScript, jQuery, and React. I have a strong
+          understanding of user experience design and accessibility. I'm always learning new technologies and techniques
+          to stay up-to-date in the field.</p>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
