--- a/hw2/index.html
+++ b/hw2/index.html
@@ -41,7 +41,7 @@
   <section class="bg-set-introduction">
     <div class="container d-flex justify-content-between">
       <div class="introduction">
-        <h2 class="display-3 text-fff h2-mb-36px mb-0">Introduction</h2>
+        <h2 class="display-3 text-fff mb-36px mb-0">Introduction</h2>
         <p class="fs-4 text-fff intro">Hi, I'm William Lee, a Front-End Developer with a passion for building beautiful
           and
           responsive websites that
@@ -59,39 +59,48 @@
       </div>
     </div>
   </section>
-  <section>
-    <div class="container">
-      <div>
-        <ul>
-          <li>
-            <span>01</span>
-            <h3>Attention to Detail</h3>
-            <p>Meticulous code analysis and optimization.</p>
-          </li>
-          <li>
-            <span>02</span>
-            <h3>Adaptability</h3>
-            <p>Swift learning of new technologies.
-            </p>
-          </li>
-          <li>
-            <span>03</span>
-            <h3>Team Player</h3>
-            <p>Identifying and resolving issues.</p>
-          </li>
-          <li>
-            <span>04</span>
-            <h3>Problem Solver</h3>
-            <p>Collaborates and shares ideas.</p>
-          </li>
-        </ul>
-      </div>
-      <div>
-        <h2>About Me</h2>
-        <p>With over 5 years of experience, I'm proficient in HTML, CSS, JavaScript, jQuery, and React. I have a strong
+  <section class="about-me-pt">
+    <div class="container d-flex justify-content-between align-items-center">
+      <ul class="ability-group d-flex flex-wrap justify-content-between p-0">
+        <li class="p-3 ability-number">
+          <span>01</span>
+          <h3>Attention to Detail</h3>
+          <p class="fs-6">Meticulous code analysis and optimization.</p>
+        </li>
+        <li class="p-3 ability-number">
+          <span>02</span>
+          <h3>Adaptability</h3>
+          <p class="fs-6">Swift learning of new technologies.
+          </p>
+        </li>
+        <li class="p-3 ability-number">
+          <span>03</span>
+          <h3>Team Player</h3>
+          <p class="fs-6">Identifying and resolving issues.</p>
+        </li>
+        <li class="p-3 ability-number">
+          <span>04</span>
+          <h3>Problem Solver</h3>
+          <p class="fs-6">Collaborates and shares ideas.</p>
+        </li>
+      </ul>
+      <div class="about-me-depiction">
+        <h2 class="text-64px mb-36px">About Me</h2>
+        <p class="fs-4">With over 5 years of experience, I'm proficient in HTML, CSS, JavaScript, jQuery, and React. I have a strong
           understanding of user experience design and accessibility. I'm always learning new technologies and techniques
           to stay up-to-date in the field.</p>
       </div>
+    </div>
+  </section>
+  <section class="bg-contact-me">
+    <div class="to-contact-me d-flex">
+      <h2 class="text-64px m-0 me-4 lh-base text-fff">CONTACT ME</h2>
+      <img src="./image/trending_flat_black_24dp 1.png" alt="前往contact me">
+    </div>
+    <div>
+      <img class="dc-icon" src="" alt="">
+      <img class="ig-icon" src="" alt="">
+      <img class="message-icon" src="" alt="">
     </div>
   </section>
 </body>
