--- a/hw2/index.html
+++ b/hw2/index.html
@@ -85,24 +85,49 @@
         </li>
       </ul>
       <div class="about-me-depiction">
-        <h2 class="text-64px mb-36px">About Me</h2>
-        <p class="fs-4">With over 5 years of experience, I'm proficient in HTML, CSS, JavaScript, jQuery, and React. I have a strong
+        <h2 class="text-64px mb-36px lh-base">About Me</h2>
+        <p class="fs-4">With over 5 years of experience, I'm proficient in HTML, CSS, JavaScript, jQuery, and React. I
+          have a strong
           understanding of user experience design and accessibility. I'm always learning new technologies and techniques
           to stay up-to-date in the field.</p>
       </div>
     </div>
   </section>
   <section class="bg-contact-me">
-    <div class="to-contact-me d-flex">
-      <h2 class="text-64px m-0 me-4 lh-base text-fff">CONTACT ME</h2>
-      <img src="./image/trending_flat_black_24dp 1.png" alt="前往contact me">
-    </div>
-    <div>
-      <img class="dc-icon" src="" alt="">
-      <img class="ig-icon" src="" alt="">
-      <img class="message-icon" src="" alt="">
+    <div class="container d-flex justify-content-between align-items-center">
+      <div class="to-contact-me d-flex">
+        <h2 class="text-64px m-0 me-4 lh-base text-fff">CONTACT ME</h2>
+        <img src="./image/trending_flat_black_24dp 1.png" alt="前往contact me">
+      </div>
+      <div class="d-flex">
+        <img src="./image/discord.png" alt="discord">
+        <img class="mx-20px" src="./image/instagram.png" alt="instagram">
+        <img src="./image/message.png" alt="message">
+      </div>
     </div>
   </section>
+  <section class="my-projects">
+    <div class="container">
+      <h2 class="text-64px lh-base mb-0 h2-width-746px ms-auto">My Projects</h2>
+      <div class="d-flex justify-content-between">
+        <img class="me-24px projects-image-416px" src="./image/Rectangle 10.png" alt="作品">
+        <div class="projects-width-856px">
+          <div class="d-flex justify-content-between mb-28px">
+            <img class="projects-image-196px me-24px" src="./image/Rectangle 15.png" alt="作品">
+            <p class="text-15161d">I've worked on a variety of websites, including e-commerce sites, blogs, and landing
+              pages. I take pride in creating clean, efficient, and user-friendly code.</p>
+          </div>
+          <div class="d-flex justify-content-between">
+            <img class="projects-image-306px" src="./image/Rectangle 14.png" alt="作品">
+            <img class="projects-image-526px" src="./image/Rectangle 29.png" alt="作品">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer class="footer-py-40px text-center bg-black">
+    <span class="text-white">all rights reserved @hexschool2023</span>
+  </footer>
 </body>
 
 </html>
