fin: nav & header

--- a/hw3/index.html
+++ b/hw3/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../reset.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/index.css">
   <title>主線三 - 眼鏡網站</title>
 </head>
+
 <body>
-  
+  <nav class="nav-bg">
+    <div class="container d-flex justify-content-between align-items-center">
+      <img class="logo" src="./image/logo-white.png" alt="網站圖示">
+      <ul class="navbar d-flex align-items-center color-fff m-0">
+        <li class="fs-20px">系列鏡框</li>
+        <li class="ms-64px fs-20px">門市據點</li>
+        <li class="ms-64px fs-20px">部落格</li>
+        <li class="ms-64px fs-20px">常見問題</li>
+      </ul>
+    </div>
+  </nav>
+  <header class="header-bg text-end">
+    <div class="container">
+      <p class="color-650300 text-end fs-36px roboto-regular m-0">Promise-Desert 2020 早春系列</p>
+      <h1 class="color-650300 fs-64px roboto-bold m-0 lh-base">看得清，才能看得遠</h1>
+      <a href="#" class="d-inline-block fs-20px text-end buy-now color-fff lh-base">立即購買</a>
+    </div>
+  </header>
+
 </body>
+
 </html>
