--- a/hw3/index.html
+++ b/hw3/index.html
@@ -76,10 +76,18 @@
       </ul>
     </div>
   </section>
-  <section class="section-py-80px">
+  <section class="section-py-80px section-index-bg">
     <div class="container">
-      <div class="w-50">
-        <img src="" alt="">
+      <header class="color-fff fs-48px roboto-bold text-center mb-48px">聯名設計鏡框</header>
+      <div class="d-flex">
+        <div class="w-50">
+          <img src="./image/home-section4-1.png" alt="DOUBLE A+">
+          <span class="roboto-black-italic d-block text-center bg-fff color-aa0601 fs-48px double-a">DOUBLE A+</span>
+        </div>
+        <div class="w-50">
+          <img src="./image/home-section4-2.png" alt="YOUTH">
+          <span class="roboto-black-italic d-block text-center bg-fff color-aa0601 fs-48px youth">YOUTH</span>
+        </div>
       </div>
     </div>
   </section>
