--- a/hw3/index.html
+++ b/hw3/index.html
@@ -91,6 +91,66 @@
       </div>
     </div>
   </section>
+  <section class="section-py-80px">
+    <div class="container">
+      <header class="color-650300 fs-48px roboto-bold text-center mb-48px">顧客推薦</header>
+      <div class="row">
+        <div class="col">
+          <img src="./image/home-section5-1.png" alt="顧客">
+          <div class="p-3">
+            <span class="d-block mb-8px roboto-medium">Jessy</span>
+            <p class="min-h-72px mb-48px">眼鏡品質優良，下次還會想來這邊購買！</p>
+            <span class="color-707070 fs-14px">2021/06/20</span>
+          </div>
+        </div>
+        <div class="col">
+          <img src="./image/home-section5-2.png" alt="顧客">
+          <div class="p-3">
+            <span class="d-block mb-8px roboto-medium">凱倫</span>
+            <p class="min-h-72px mb-48px">做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
+            <span class="color-707070 fs-14px">2021/04/18</span>
+          </div>
+        </div>
+        <div class="col">
+          <img src="./image/home-section5-3.png" alt="顧客">
+          <div class="p-3">
+            <span class="d-block mb-8px roboto-medium">悠悠</span>
+            <p class="min-h-72px mb-48px">謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
+            <span class="color-707070 fs-14px">2020/12/25</span>
+          </div>
+        </div>
+        <div class="col">
+          <img src="./image/home-section5-4.png" alt="顧客">
+          <div class="p-3">
+            <span class="d-block mb-8px roboto-medium">Kyuan</span>
+            <p class="min-h-72px mb-48px">服務很好，品質沒有任何問題，非常喜歡。</p>
+            <span class="color-707070 fs-14px">2020/10/31</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="section-py-80px bg-fbf2f2">
+    <div class="container">
+      <header class="color-650300 fs-48px roboto-bold text-center mb-48px">聯絡我們</header>
+      <form class="col-6 d-flex flex-column mx-auto" action="#">
+        <p class="fs-20px mx-auto mb-24px">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
+        <label class="mb-8px" for="name">姓名</label>
+        <input class="mb-16px" type="text" name="name" id="name" placeholder="陳小明">
+        <label class="mb-8px" for="tel">聯絡電話</label>
+        <input class="mb-16px" type="tel" name="tel" id="tel" placeholder="0912-345-678">
+        <label class="mb-8px" for="email">電子郵件</label>
+        <input class="mb-16px" type="email" name="email" id="email" placeholder="example@email.com">
+        <label class="mb-8px" for="feedback">意見反應</label>
+        <textarea class="mb-16px min-h-136px" name="feedback" id="feedback" cols="30" rows="10" placeholder="請輸入您的意見"></textarea>
+        <div class="d-flex align-items-center mb-48px">
+          <input type="checkbox" name="check" id="check" class="me-1 w-24px">
+          <span class="">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</span>
+        </div>
+        <input type="submit" class="border-0 col-8 mx-auto form-checkbtn roboto-bold text-center bg-aa0601 color-fff" value="確認送出">
+      </form>
+    </div>
+  </section>
 </body>
 
 </html>
