--- a/hw3/index.html
+++ b/hw3/index.html
@@ -7,8 +7,9 @@
   <link rel="stylesheet" href="../reset.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="stylesheet" href="./css/index.css">
-  <title>主線三 - 眼鏡網站</title>
 </head>
 
 <body>
@@ -30,127 +31,169 @@
       <a href="#" class="d-inline-block buy-now fs-20px text-end bg-aa0601 color-fff lh-base">立即購買</a>
     </div>
   </header>
-  <section class="section-py-80px bg-fbf2f2">
-    <div class="container">
-      <header class="color-650300 fs-64px roboto-bold text-center mb-24px">用專業的心，做專業的事</header>
-      <ul class="row">
-        <li class="col">
-          <img class="w-100px d-block mx-auto mb-16px" src="./image/home-section2-1.png" alt="單一價格">
-          <h2 class="roboto-bold fs-24px mb-8px text-center color-650300">單一價格</h2>
-          <p class="mb-0">無論任何度數皆不需追加費用即可擁有適合自己的薄型球面鏡片。</p>
-        </li>
-        <li class="col">
-          <img class="w-100px d-block mx-auto mb-16px" src="./image/home-section2-2.png" alt="20 分鐘即可取件">
-          <h2 class="roboto-bold fs-24px mb-8px text-center color-650300">20 分鐘即可取件</h2>
-          <p class="mb-0">為了您的寶貴時間著想，以豐富專業知識與技術將結帳到交件的時間縮減至最快 20 分鐘即可完成。</p>
-        </li>
-        <li class="col">
-          <img class="w-100px d-block mx-auto mb-16px" src="./image/home-section2-3.png" alt="安心售後服務">
-          <h2 class="roboto-bold fs-24px mb-8px text-center color-650300">安心售後服務</h2>
-          <p class="mb-0">我們提供長達 120 天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。</p>
-        </li>
-        <li class="col">
-          <img class="w-100px d-block mx-auto mb-16px" src="./image/home-section2-4.png" alt="關於鏡片">
-          <h2 class="roboto-bold fs-24px mb-8px text-center color-650300">關於鏡片</h2>
-          <p class="mb-0">使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
-        </li>
-      </ul>
-    </div>
-  </section>
-  <section class="section-py-80px">
-    <div class="container">
-      <header class="color-650300 fs-48px roboto-bold text-center mb-48px">經典系列鏡框</header>
-      <ul class="row mb-0">
-        <li class="col-4">
-          <img class="mb-8px" src="./image/home-section3-1.png" alt="OPTICAL">
-          <h3 class="roboto-black-italic mb-0 fs-48px text-center color-aa0601">OPTICAL</h3>
-         </li>
-         <li class="col-4">
-          <img class="mb-8px" src="./image/home-section3-2.png" alt="SUNGLASSES">
-          <h3 class="roboto-black-italic mb-0 fs-48px text-center color-aa0601">SUNGLASSES</h3>
-         </li>
-         <li class="col-4">
-          <img class="mb-8px" src="./image/home-section3-3.png" alt="FUNCTIONAL">
-          <h3 class="roboto-black-italic mb-0 fs-48px text-center color-aa0601">FUNCTIONAL</h3>
-         </li>
-      </ul>
-    </div>
-  </section>
-  <section class="section-py-80px section-index-bg">
-    <div class="container">
-      <header class="color-fff fs-48px roboto-bold text-center mb-48px">聯名設計鏡框</header>
-      <div class="d-flex">
-        <div class="w-50">
-          <img src="./image/home-section4-1.png" alt="DOUBLE A+">
-          <span class="roboto-black-italic d-block text-center bg-fff color-aa0601 fs-48px double-a">DOUBLE A+</span>
-        </div>
-        <div class="w-50">
-          <img src="./image/home-section4-2.png" alt="YOUTH">
-          <span class="roboto-black-italic d-block text-center bg-fff color-aa0601 fs-48px youth">YOUTH</span>
-        </div>
+  <main>
+    <section class="section-py-80px bg-fbf2f2">
+      <div class="container">
+        <header class="color-650300 fs-64px roboto-bold text-center mb-24px">用專業的心，做專業的事</header>
+        <ul class="row">
+          <li class="col">
+            <img class="w-100px d-block mx-auto mb-16px" src="./image/home-section2-1.png" alt="單一價格">
+            <h2 class="roboto-bold fs-24px mb-8px text-center color-650300">單一價格</h2>
+            <p class="mb-0">無論任何度數皆不需追加費用即可擁有適合自己的薄型球面鏡片。</p>
+          </li>
+          <li class="col">
+            <img class="w-100px d-block mx-auto mb-16px" src="./image/home-section2-2.png" alt="20 分鐘即可取件">
+            <h2 class="roboto-bold fs-24px mb-8px text-center color-650300">20 分鐘即可取件</h2>
+            <p class="mb-0">為了您的寶貴時間著想，以豐富專業知識與技術將結帳到交件的時間縮減至最快 20 分鐘即可完成。</p>
+          </li>
+          <li class="col">
+            <img class="w-100px d-block mx-auto mb-16px" src="./image/home-section2-3.png" alt="安心售後服務">
+            <h2 class="roboto-bold fs-24px mb-8px text-center color-650300">安心售後服務</h2>
+            <p class="mb-0">我們提供長達 120 天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。</p>
+          </li>
+          <li class="col">
+            <img class="w-100px d-block mx-auto mb-16px" src="./image/home-section2-4.png" alt="關於鏡片">
+            <h2 class="roboto-bold fs-24px mb-8px text-center color-650300">關於鏡片</h2>
+            <p class="mb-0">使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
+          </li>
+        </ul>
       </div>
-    </div>
-  </section>
-  <section class="section-py-80px">
-    <div class="container">
-      <header class="color-650300 fs-48px roboto-bold text-center mb-48px">顧客推薦</header>
-      <div class="row">
-        <div class="col">
-          <img src="./image/home-section5-1.png" alt="顧客">
-          <div class="p-3">
-            <span class="d-block mb-8px roboto-medium">Jessy</span>
-            <p class="min-h-72px mb-48px">眼鏡品質優良，下次還會想來這邊購買！</p>
-            <span class="color-707070 fs-14px">2021/06/20</span>
+    </section>
+    <section class="section-py-80px">
+      <div class="container">
+        <header class="color-650300 fs-48px roboto-bold text-center mb-48px">經典系列鏡框</header>
+        <ul class="row mb-0">
+          <li class="col-4">
+            <img class="mb-8px" src="./image/home-section3-1.png" alt="OPTICAL">
+            <h3 class="roboto-black-italic mb-0 fs-48px text-center color-aa0601">OPTICAL</h3>
+          </li>
+          <li class="col-4">
+            <img class="mb-8px" src="./image/home-section3-2.png" alt="SUNGLASSES">
+            <h3 class="roboto-black-italic mb-0 fs-48px text-center color-aa0601">SUNGLASSES</h3>
+          </li>
+          <li class="col-4">
+            <img class="mb-8px" src="./image/home-section3-3.png" alt="FUNCTIONAL">
+            <h3 class="roboto-black-italic mb-0 fs-48px text-center color-aa0601">FUNCTIONAL</h3>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="section-py-80px section-index-bg">
+      <div class="container">
+        <header class="color-fff fs-48px roboto-bold text-center mb-48px">聯名設計鏡框</header>
+        <div class="d-flex">
+          <div class="w-50">
+            <img src="./image/home-section4-1.png" alt="DOUBLE A+">
+            <span class="roboto-black-italic d-block text-center bg-fff color-aa0601 fs-48px double-a">DOUBLE A+</span>
           </div>
-        </div>
-        <div class="col">
-          <img src="./image/home-section5-2.png" alt="顧客">
-          <div class="p-3">
-            <span class="d-block mb-8px roboto-medium">凱倫</span>
-            <p class="min-h-72px mb-48px">做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
-            <span class="color-707070 fs-14px">2021/04/18</span>
-          </div>
-        </div>
-        <div class="col">
-          <img src="./image/home-section5-3.png" alt="顧客">
-          <div class="p-3">
-            <span class="d-block mb-8px roboto-medium">悠悠</span>
-            <p class="min-h-72px mb-48px">謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
-            <span class="color-707070 fs-14px">2020/12/25</span>
-          </div>
-        </div>
-        <div class="col">
-          <img src="./image/home-section5-4.png" alt="顧客">
-          <div class="p-3">
-            <span class="d-block mb-8px roboto-medium">Kyuan</span>
-            <p class="min-h-72px mb-48px">服務很好，品質沒有任何問題，非常喜歡。</p>
-            <span class="color-707070 fs-14px">2020/10/31</span>
+          <div class="w-50">
+            <img src="./image/home-section4-2.png" alt="YOUTH">
+            <span class="roboto-black-italic d-block text-center bg-fff color-aa0601 fs-48px youth">YOUTH</span>
           </div>
         </div>
       </div>
-    </div>
-  </section>
-  <section class="section-py-80px bg-fbf2f2">
-    <div class="container">
-      <header class="color-650300 fs-48px roboto-bold text-center mb-48px">聯絡我們</header>
-      <form class="col-6 d-flex flex-column mx-auto" action="#">
-        <p class="fs-20px mx-auto mb-24px">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
-        <label class="mb-8px" for="name">姓名</label>
-        <input class="mb-16px" type="text" name="name" id="name" placeholder="陳小明">
-        <label class="mb-8px" for="tel">聯絡電話</label>
-        <input class="mb-16px" type="tel" name="tel" id="tel" placeholder="0912-345-678">
-        <label class="mb-8px" for="email">電子郵件</label>
-        <input class="mb-16px" type="email" name="email" id="email" placeholder="example@email.com">
-        <label class="mb-8px" for="feedback">意見反應</label>
-        <textarea class="mb-16px min-h-136px" name="feedback" id="feedback" cols="30" rows="10" placeholder="請輸入您的意見"></textarea>
-        <div class="d-flex align-items-center mb-48px">
-          <input type="checkbox" name="check" id="check" class="me-1 w-24px">
-          <span class="">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</span>
+    </section>
+    <section class="section-py-80px">
+      <div class="container">
+        <header class="color-650300 fs-48px roboto-bold text-center mb-48px">顧客推薦</header>
+        <div class="row">
+          <div class="col">
+            <img src="./image/home-section5-1.png" alt="顧客">
+            <div class="p-3">
+              <span class="d-block mb-8px roboto-medium">Jessy</span>
+              <p class="min-h-72px mb-48px">眼鏡品質優良，下次還會想來這邊購買！</p>
+              <span class="color-707070 fs-14px">2021/06/20</span>
+            </div>
+          </div>
+          <div class="col">
+            <img src="./image/home-section5-2.png" alt="顧客">
+            <div class="p-3">
+              <span class="d-block mb-8px roboto-medium">凱倫</span>
+              <p class="min-h-72px mb-48px">做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
+              <span class="color-707070 fs-14px">2021/04/18</span>
+            </div>
+          </div>
+          <div class="col">
+            <img src="./image/home-section5-3.png" alt="顧客">
+            <div class="p-3">
+              <span class="d-block mb-8px roboto-medium">悠悠</span>
+              <p class="min-h-72px mb-48px">謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
+              <span class="color-707070 fs-14px">2020/12/25</span>
+            </div>
+          </div>
+          <div class="col">
+            <img src="./image/home-section5-4.png" alt="顧客">
+            <div class="p-3">
+              <span class="d-block mb-8px roboto-medium">Kyuan</span>
+              <p class="min-h-72px mb-48px">服務很好，品質沒有任何問題，非常喜歡。</p>
+              <span class="color-707070 fs-14px">2020/10/31</span>
+            </div>
+          </div>
         </div>
-        <input type="submit" class="border-0 col-8 mx-auto form-checkbtn roboto-bold text-center bg-aa0601 color-fff" value="確認送出">
-      </form>
+      </div>
+    </section>
+    <section class="section-py-80px bg-fbf2f2">
+      <div class="container">
+        <header class="color-650300 fs-48px roboto-bold text-center mb-48px">聯絡我們</header>
+        <form class="col-6 d-flex flex-column mx-auto" action="#">
+          <p class="fs-20px mx-auto mb-24px">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
+          <label class="mb-8px" for="name">姓名</label>
+          <input class="mb-16px" type="text" name="name" id="name" placeholder="陳小明">
+          <label class="mb-8px" for="tel">聯絡電話</label>
+          <input class="mb-16px" type="tel" name="tel" id="tel" placeholder="0912-345-678">
+          <label class="mb-8px" for="email">電子郵件</label>
+          <input class="mb-16px" type="email" name="email" id="email" placeholder="example@email.com">
+          <label class="mb-8px" for="feedback">意見反應</label>
+          <textarea class="mb-16px min-h-136px" name="feedback" id="feedback" cols="30" rows="10"
+            placeholder="請輸入您的意見"></textarea>
+          <div class="d-flex align-items-center mb-48px">
+            <input type="checkbox" name="check" id="check" class="me-1 w-24px">
+            <span class="">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</span>
+          </div>
+          <input type="submit" class="border-0 col-8 mx-auto form-checkbtn roboto-bold text-center bg-aa0601 color-fff"
+            value="確認送出">
+        </form>
+      </div>
+    </section>
+  </main>
+  <footer class="footer-py bg-aa0601">
+    <div class="container">
+      <div class="d-flex justify-content-between align-items-center mb-24px">
+        <ul class="p-0 d-flex align-items-center color-fff">
+          <li class="me-48px"><a href="#">首頁</a></li>
+          <li class="me-48px"><a href="#">系列鏡框</a></li>
+          <li class="me-48px"><a href="#">門市據點</a></li>
+          <li class="me-48px"><a href="#">部落格</a></li>
+          <li><a href="#">常見問題</a></li>
+        </ul>
+        <div class="d-flex">
+          <img class="w-48px" src="./image/ic-social-fb.png" alt="FB">
+          <img class="mx-32px w-48px" src="./image/ic_social_ig.png" alt="IG">
+          <img class="w-48px" src="./image/ic_social_line.png" alt="LINE">
+        </div>
+      </div>
+      <div class="mb-8px d-flex align-items-center">
+        <span class="fs-48px me-16px material-symbols-outlined color-fff">
+          call
+        </span>
+        <a href="tel:0988888888" class="color-fff fs-36px">0800-000-000</a>
+      </div>
+      <div class="d-flex align-items-center">
+        <span class="fs-48px me-16px material-symbols-outlined color-fff">
+          mail
+        </span>
+        <a href="mailto:glasses@business.com" class="color-fff fs-36px">glasses@business.com</a>
+      </div>
+      <hr class="my-32px">
+      <div class="d-flex justify-content-between">
+        <span class="color-fff">Copyright © 2020 Glasses.All rights reserved.</span>
+        <div>
+          <span class="color-fff me-48px">隱私權政策</span>
+          <spa class="color-fff">服務條款</span>
+        </div>
+      </div>
     </div>
-  </section>
+  </footer>
 </body>
 
 </html>
