finish: hw3 768px

--- a/hw3/index.html
+++ b/hw3/index.html
@@ -34,24 +34,25 @@
   <main>
     <section class="section-py-80px bg-fbf2f2">
       <div class="container">
-        <header class="color-650300 fs-64px roboto-bold text-center mb-24px">用專業的心，做專業的事</header>
+        <header class="section1-header color-650300 fs-64px fs-md-6 roboto-bold text-center mb-24px">用專業的心，做專業的事
+        </header>
         <ul class="row">
-          <li class="col">
+          <li class="col-6 col-lg-3">
             <img class="w-100px d-block mx-auto mb-16px" src="./image/home-section2-1.png" alt="單一價格">
             <h2 class="roboto-bold fs-24px mb-8px text-center color-650300">單一價格</h2>
             <p class="mb-0">無論任何度數皆不需追加費用即可擁有適合自己的薄型球面鏡片。</p>
           </li>
-          <li class="col">
+          <li class="col-6 col-lg-3">
             <img class="w-100px d-block mx-auto mb-16px" src="./image/home-section2-2.png" alt="20 分鐘即可取件">
             <h2 class="roboto-bold fs-24px mb-8px text-center color-650300">20 分鐘即可取件</h2>
             <p class="mb-0">為了您的寶貴時間著想，以豐富專業知識與技術將結帳到交件的時間縮減至最快 20 分鐘即可完成。</p>
           </li>
-          <li class="col">
+          <li class="col-6 col-lg-3">
             <img class="w-100px d-block mx-auto mb-16px" src="./image/home-section2-3.png" alt="安心售後服務">
             <h2 class="roboto-bold fs-24px mb-8px text-center color-650300">安心售後服務</h2>
             <p class="mb-0">我們提供長達 120 天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。</p>
           </li>
-          <li class="col">
+          <li class="col-6 col-lg-3">
             <img class="w-100px d-block mx-auto mb-16px" src="./image/home-section2-4.png" alt="關於鏡片">
             <h2 class="roboto-bold fs-24px mb-8px text-center color-650300">關於鏡片</h2>
             <p class="mb-0">使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
@@ -62,16 +63,16 @@
     <section class="section-py-80px">
       <div class="container">
         <header class="color-650300 fs-48px roboto-bold text-center mb-48px">經典系列鏡框</header>
-        <ul class="row mb-0">
-          <li class="col-4">
+        <ul class="row p-0 mb-0 flex-column flex-lg-row align-items-center">
+          <li class="card col-6 col-lg-4">
             <img class="mb-8px" src="./image/home-section3-1.png" alt="OPTICAL">
             <h3 class="roboto-black-italic mb-0 fs-48px text-center color-aa0601">OPTICAL</h3>
           </li>
-          <li class="col-4">
+          <li class="card col-6 col-lg-4">
             <img class="mb-8px" src="./image/home-section3-2.png" alt="SUNGLASSES">
             <h3 class="roboto-black-italic mb-0 fs-48px text-center color-aa0601">SUNGLASSES</h3>
           </li>
-          <li class="col-4">
+          <li class="col-6 col-lg-4">
             <img class="mb-8px" src="./image/home-section3-3.png" alt="FUNCTIONAL">
             <h3 class="roboto-black-italic mb-0 fs-48px text-center color-aa0601">FUNCTIONAL</h3>
           </li>
@@ -81,12 +82,12 @@
     <section class="section-py-80px section-index-bg">
       <div class="container">
         <header class="color-fff fs-48px roboto-bold text-center mb-48px">聯名設計鏡框</header>
-        <div class="d-flex">
-          <div class="w-50">
+        <div class="d-flex flex-lg-row flex-column">
+          <div class="mb-lg-0 mb-24px">
             <img src="./image/home-section4-1.png" alt="DOUBLE A+">
             <span class="roboto-black-italic d-block text-center bg-fff color-aa0601 fs-48px double-a">DOUBLE A+</span>
           </div>
-          <div class="w-50">
+          <div>
             <img src="./image/home-section4-2.png" alt="YOUTH">
             <span class="roboto-black-italic d-block text-center bg-fff color-aa0601 fs-48px youth">YOUTH</span>
           </div>
@@ -96,37 +97,46 @@
     <section class="section-py-80px">
       <div class="container">
         <header class="color-650300 fs-48px roboto-bold text-center mb-48px">顧客推薦</header>
-        <div class="row">
-          <div class="col">
-            <img src="./image/home-section5-1.png" alt="顧客">
-            <div class="p-3">
-              <span class="d-block mb-8px roboto-medium">Jessy</span>
-              <p class="min-h-72px mb-48px">眼鏡品質優良，下次還會想來這邊購買！</p>
-              <span class="color-707070 fs-14px">2021/06/20</span>
+        <div class="row g-4">
+          <div class="col-lg-3 col-6">
+            <div class="section4-shadow">
+              <img src="./image/home-section5-1.png" alt="顧客">
+              <div class="p-3">
+                <span class="d-block mb-8px roboto-medium">Jessy</span>
+                <p class="min-h-72px mb-48px">眼鏡品質優良，下次還會想來這邊購買！</p>
+                <span class="color-707070 fs-14px">2021/06/20</span>
+              </div>
             </div>
           </div>
-          <div class="col">
-            <img src="./image/home-section5-2.png" alt="顧客">
-            <div class="p-3">
-              <span class="d-block mb-8px roboto-medium">凱倫</span>
-              <p class="min-h-72px mb-48px">做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
-              <span class="color-707070 fs-14px">2021/04/18</span>
+          <div class="col-lg-3 col-6">
+            <div class="section4-shadow">
+              <img src="./image/home-section5-2.png" alt="顧客">
+              <div class="p-3">
+                <div></div>
+                <span class="d-block mb-8px roboto-medium">凱倫</span>
+                <p class="min-h-72px mb-48px">做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
+                <span class="color-707070 fs-14px">2021/04/18</span>
+              </div>
             </div>
           </div>
-          <div class="col">
-            <img src="./image/home-section5-3.png" alt="顧客">
-            <div class="p-3">
-              <span class="d-block mb-8px roboto-medium">悠悠</span>
-              <p class="min-h-72px mb-48px">謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
-              <span class="color-707070 fs-14px">2020/12/25</span>
+          <div class="col-lg-3 col-6">
+            <div class="section4-shadow">
+              <img src="./image/home-section5-3.png" alt="顧客">
+              <div class="p-3">
+                <span class="d-block mb-8px roboto-medium">悠悠</span>
+                <p class="min-h-72px mb-48px">謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
+                <span class="color-707070 fs-14px">2020/12/25</span>
+              </div>
             </div>
           </div>
-          <div class="col">
-            <img src="./image/home-section5-4.png" alt="顧客">
-            <div class="p-3">
-              <span class="d-block mb-8px roboto-medium">Kyuan</span>
-              <p class="min-h-72px mb-48px">服務很好，品質沒有任何問題，非常喜歡。</p>
-              <span class="color-707070 fs-14px">2020/10/31</span>
+          <div class="col-lg-3 col-6">
+            <div class="section4-shadow">
+              <img src="./image/home-section5-4.png" alt="顧客">
+              <div class="p-3">
+                <span class="d-block mb-8px roboto-medium">Kyuan</span>
+                <p class="min-h-72px mb-48px">服務很好，品質沒有任何問題，非常喜歡。</p>
+                <span class="color-707070 fs-14px">2020/10/31</span>
+              </div>
             </div>
           </div>
         </div>
@@ -135,7 +145,7 @@
     <section class="section-py-80px bg-fbf2f2">
       <div class="container">
         <header class="color-650300 fs-48px roboto-bold text-center mb-48px">聯絡我們</header>
-        <form class="col-6 d-flex flex-column mx-auto" action="#">
+        <form class="col-lg-6 col-10 d-flex flex-column mx-auto" action="#">
           <p class="fs-20px mx-auto mb-24px">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
           <label class="mb-8px" for="name">姓名</label>
           <input class="mb-16px" type="text" name="name" id="name" placeholder="陳小明">
@@ -159,16 +169,16 @@
   <footer class="footer-py bg-aa0601">
     <div class="container">
       <div class="d-flex justify-content-between align-items-center mb-24px">
-        <ul class="p-0 d-flex align-items-center color-fff">
-          <li class="me-48px"><a href="#">首頁</a></li>
-          <li class="me-48px"><a href="#">系列鏡框</a></li>
-          <li class="me-48px"><a href="#">門市據點</a></li>
-          <li class="me-48px"><a href="#">部落格</a></li>
+        <ul class="p-0 mb-0 d-flex align-items-center color-fff">
+          <li class="me-48px d-flex align-items-center"><a href="#">首頁</a></li>
+          <li class="me-48px d-flex align-items-center"><a href="#">系列鏡框</a></li>
+          <li class="me-48px d-flex align-items-center"><a href="#">門市據點</a></li>
+          <li class="me-48px d-flex align-items-center"><a href="#">部落格</a></li>
           <li><a href="#">常見問題</a></li>
         </ul>
         <div class="d-flex">
           <img class="w-48px" src="./image/ic-social-fb.png" alt="FB">
-          <img class="mx-32px w-48px" src="./image/ic_social_ig.png" alt="IG">
+          <img class="footer-icon-mx w-48px" src="./image/ic_social_ig.png" alt="IG">
           <img class="w-48px" src="./image/ic_social_line.png" alt="LINE">
         </div>
       </div>
