--- a/hw3/index.html
+++ b/hw3/index.html
@@ -13,14 +13,16 @@
 </head>
 
 <body>
-  <nav class="bg-aa0601">
-    <div class="container d-flex justify-content-between align-items-center">
-      <img class="logo" src="./image/logo-white.png" alt="網站圖示">
-      <ul class="navbar mb-0 d-flex align-items-center color-fff m-0">
-        <li class="fs-20px">系列鏡框</li>
-        <li class="ms-64px fs-20px">門市據點</li>
-        <li class="ms-64px fs-20px">部落格</li>
-        <li class="ms-64px fs-20px">常見問題</li>
+  <nav class="bg-aa0601 navbar">
+    <div class="container-768 container d-flex justify-content-between align-items-center flex-md-row flex-column">
+      <div class="logo-padding">
+        <img class="logo" src="./image/logo-white.png" alt="網站圖示">
+      </div>
+      <ul class="nav-list p-0 mb-0 d-flex align-items-center color-fff m-0">
+        <li class="nav-item fs-20px">系列鏡框</li>
+        <li class="nav-item ms-64px fs-20px">門市據點</li>
+        <li class="nav-item ms-64px fs-20px">部落格</li>
+        <li class="nav-item ms-64px fs-20px">常見問題</li>
       </ul>
     </div>
   </nav>
@@ -72,7 +74,7 @@
             <img class="mb-8px" src="./image/home-section3-2.png" alt="SUNGLASSES">
             <h3 class="roboto-black-italic mb-0 fs-48px text-center color-aa0601">SUNGLASSES</h3>
           </li>
-          <li class="col-6 col-lg-4">
+          <li class="card col-6 col-lg-4">
             <img class="mb-8px" src="./image/home-section3-3.png" alt="FUNCTIONAL">
             <h3 class="roboto-black-italic mb-0 fs-48px text-center color-aa0601">FUNCTIONAL</h3>
           </li>
