--- a/hw3/index.html
+++ b/hw3/index.html
@@ -28,33 +28,33 @@
   </nav>
   <header class="header-bg text-end">
     <div class="container">
-      <p class="color-650300 text-end fs-36px roboto-regular m-0">Promise-Desert 2020 早春系列</p>
-      <h1 class="color-650300 fs-64px roboto-bold m-0 lh-base">看得清，才能看得遠</h1>
+      <p class="color-650300 text-end fs-36px roboto-regular m-0 fs-16-768px">Promise-Desert 2020 早春系列</p>
+      <h1 class="color-650300 fs-64px roboto-bold m-0 lh-base fs-24-768px">看得清，才能看得遠</h1>
       <a href="#" class="d-inline-block buy-now fs-20px text-end bg-aa0601 color-fff lh-base">立即購買</a>
     </div>
   </header>
   <main>
     <section class="section-py-80px bg-fbf2f2">
       <div class="container">
-        <header class="section1-header color-650300 fs-64px fs-md-6 roboto-bold text-center mb-24px">用專業的心，做專業的事
+        <header class="section1-header color-650300 fs-64px fs-md-6 roboto-bold text-center mb-24px fs-24-768px">用專業的心，做專業的事
         </header>
         <ul class="row">
-          <li class="col-6 col-lg-3">
+          <li class="col-md-6 col-lg-3 col-12">
             <img class="w-100px d-block mx-auto mb-16px" src="./image/home-section2-1.png" alt="單一價格">
             <h2 class="roboto-bold fs-24px mb-8px text-center color-650300">單一價格</h2>
             <p class="mb-0">無論任何度數皆不需追加費用即可擁有適合自己的薄型球面鏡片。</p>
           </li>
-          <li class="col-6 col-lg-3">
+          <li class="col-md-6 col-lg-3 col-12">
             <img class="w-100px d-block mx-auto mb-16px" src="./image/home-section2-2.png" alt="20 分鐘即可取件">
             <h2 class="roboto-bold fs-24px mb-8px text-center color-650300">20 分鐘即可取件</h2>
             <p class="mb-0">為了您的寶貴時間著想，以豐富專業知識與技術將結帳到交件的時間縮減至最快 20 分鐘即可完成。</p>
           </li>
-          <li class="col-6 col-lg-3">
+          <li class="col-md-6 col-lg-3 col-12">
             <img class="w-100px d-block mx-auto mb-16px" src="./image/home-section2-3.png" alt="安心售後服務">
             <h2 class="roboto-bold fs-24px mb-8px text-center color-650300">安心售後服務</h2>
             <p class="mb-0">我們提供長達 120 天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。</p>
           </li>
-          <li class="col-6 col-lg-3">
+          <li class="col-md-6 col-lg-3 col-12">
             <img class="w-100px d-block mx-auto mb-16px" src="./image/home-section2-4.png" alt="關於鏡片">
             <h2 class="roboto-bold fs-24px mb-8px text-center color-650300">關於鏡片</h2>
             <p class="mb-0">使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
@@ -64,17 +64,17 @@
     </section>
     <section class="section-py-80px">
       <div class="container">
-        <header class="color-650300 fs-48px roboto-bold text-center mb-48px">經典系列鏡框</header>
+        <header class="color-650300 fs-48px roboto-bold text-center mb-48px fs-24-768px">經典系列鏡框</header>
         <ul class="row p-0 mb-0 flex-column flex-lg-row align-items-center">
-          <li class="card col-6 col-lg-4">
+          <li class="card col-12 col-md-6 col-lg-4">
             <img class="mb-8px" src="./image/home-section3-1.png" alt="OPTICAL">
             <h3 class="roboto-black-italic mb-0 fs-48px text-center color-aa0601">OPTICAL</h3>
           </li>
-          <li class="card col-6 col-lg-4">
+          <li class="card col-12 col-md-6 col-lg-4">
             <img class="mb-8px" src="./image/home-section3-2.png" alt="SUNGLASSES">
             <h3 class="roboto-black-italic mb-0 fs-48px text-center color-aa0601">SUNGLASSES</h3>
           </li>
-          <li class="card col-6 col-lg-4">
+          <li class="card col-12 col-md-6 col-lg-4">
             <img class="mb-8px" src="./image/home-section3-3.png" alt="FUNCTIONAL">
             <h3 class="roboto-black-italic mb-0 fs-48px text-center color-aa0601">FUNCTIONAL</h3>
           </li>
@@ -86,11 +86,13 @@
         <header class="color-fff fs-48px roboto-bold text-center mb-48px">聯名設計鏡框</header>
         <div class="d-flex flex-lg-row flex-column">
           <div class="mb-lg-0 mb-24px">
-            <img src="./image/home-section4-1.png" alt="DOUBLE A+">
+            <img class="d-md-block d-none" src="./image/home-section4-1.png" alt="DOUBLE A+">
+            <img class="d-md-none d-block" src="./image/home-section4-1-sm.png" alt="DOUBLE A+">
             <span class="roboto-black-italic d-block text-center bg-fff color-aa0601 fs-48px double-a">DOUBLE A+</span>
           </div>
           <div>
-            <img src="./image/home-section4-2.png" alt="YOUTH">
+            <img class="d-md-block d-none" src="./image/home-section4-2.png" alt="YOUTH">
+            <img class="d-md-none d-block" src="./image/home-section4-2-sm.png" alt="YOUTH">
             <span class="roboto-black-italic d-block text-center bg-fff color-aa0601 fs-48px youth">YOUTH</span>
           </div>
         </div>
