--- a/hw3/index.html
+++ b/hw3/index.html
@@ -36,7 +36,8 @@
   <main>
     <section class="section-py-80px bg-fbf2f2">
       <div class="container">
-        <header class="section1-header color-650300 fs-64px fs-md-6 roboto-bold text-center mb-24px fs-24-768px">用專業的心，做專業的事
+        <header class="section1-header color-650300 fs-64px fs-md-6 roboto-bold text-center mb-24px fs-24-768px">
+          用專業的心，做專業的事
         </header>
         <ul class="row">
           <li class="col-md-6 col-lg-3 col-12">
@@ -102,7 +103,7 @@
       <div class="container">
         <header class="color-650300 fs-48px roboto-bold text-center mb-48px">顧客推薦</header>
         <div class="row g-4">
-          <div class="col-lg-3 col-6">
+          <div class="col-lg-3 col-md-6 col-12">
             <div class="section4-shadow">
               <img src="./image/home-section5-1.png" alt="顧客">
               <div class="p-3">
@@ -112,7 +113,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-6">
+          <div class="col-lg-3 col-md-6 col-12">
             <div class="section4-shadow">
               <img src="./image/home-section5-2.png" alt="顧客">
               <div class="p-3">
@@ -123,7 +124,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-6">
+          <div class="col-lg-3 col-md-6 col-12">
             <div class="section4-shadow">
               <img src="./image/home-section5-3.png" alt="顧客">
               <div class="p-3">
@@ -133,7 +134,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-6">
+          <div class="col-lg-3 col-md-6 col-12">
             <div class="section4-shadow">
               <img src="./image/home-section5-4.png" alt="顧客">
               <div class="p-3">
@@ -164,7 +165,8 @@
             <input type="checkbox" name="check" id="check" class="me-1 w-24px">
             <span class="">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</span>
           </div>
-          <input type="submit" class="border-0 col-8 mx-auto form-checkbtn roboto-bold text-center bg-aa0601 color-fff"
+          <input type="submit"
+            class="border-0 col-12 col-lg-8 mx-auto form-checkbtn roboto-bold text-center bg-aa0601 color-fff"
             value="確認送出">
         </form>
       </div>
@@ -172,38 +174,42 @@
   </main>
   <footer class="footer-py bg-aa0601">
     <div class="container">
-      <div class="d-flex justify-content-between align-items-center mb-24px">
-        <ul class="p-0 mb-0 d-flex align-items-center color-fff">
-          <li class="me-48px d-flex align-items-center"><a href="#">首頁</a></li>
-          <li class="me-48px d-flex align-items-center"><a href="#">系列鏡框</a></li>
-          <li class="me-48px d-flex align-items-center"><a href="#">門市據點</a></li>
-          <li class="me-48px d-flex align-items-center"><a href="#">部落格</a></li>
-          <li><a href="#">常見問題</a></li>
-        </ul>
-        <div class="d-flex">
+      <div class="d-flex justify-content-between">
+        <div class="d-flex flex-column justify-content-start align-self-start mb-24px">
+          <ul class="p-0 mb-0 d-md-flex align-items-center color-fff py-12-768px d-md-block d-none">
+            <li class="me-48px d-flex align-items-center"><a href="#">首頁</a></li>
+            <li class="me-48px d-flex align-items-center"><a href="#">系列鏡框</a></li>
+            <li class="me-48px d-flex align-items-center"><a href="#">門市據點</a></li>
+            <li class="me-48px d-flex align-items-center"><a href="#">部落格</a></li>
+            <li><a href="#">常見問題</a></li>
+          </ul>
+          <div>
+            <div class="mb-8px d-flex align-items-center">
+              <span class="fs-48px me-16px material-symbols-outlined color-fff fs-16-768px">
+                call
+              </span>
+              <a href="tel:0988888888" class="color-fff fs-36px fs-16-768px">0800-000-000</a>
+            </div>
+            <div class="d-flex align-items-center">
+              <span class="fs-48px me-16px material-symbols-outlined color-fff fs-16-768px">
+                mail
+              </span>
+              <a href="mailto:glasses@business.com" class="color-fff fs-36px fs-16-768px">glasses@business.com</a>
+            </div>
+          </div>
+        </div>
+        <div>
           <img class="w-48px" src="./image/ic-social-fb.png" alt="FB">
           <img class="footer-icon-mx w-48px" src="./image/ic_social_ig.png" alt="IG">
           <img class="w-48px" src="./image/ic_social_line.png" alt="LINE">
         </div>
       </div>
-      <div class="mb-8px d-flex align-items-center">
-        <span class="fs-48px me-16px material-symbols-outlined color-fff">
-          call
-        </span>
-        <a href="tel:0988888888" class="color-fff fs-36px">0800-000-000</a>
-      </div>
-      <div class="d-flex align-items-center">
-        <span class="fs-48px me-16px material-symbols-outlined color-fff">
-          mail
-        </span>
-        <a href="mailto:glasses@business.com" class="color-fff fs-36px">glasses@business.com</a>
-      </div>
       <hr class="my-32px">
-      <div class="d-flex justify-content-between">
-        <span class="color-fff">Copyright © 2020 Glasses.All rights reserved.</span>
+      <div class="d-flex justify-content-between flex-md-row flex-column">
+        <span class="color-fff fs-16-768px mb-8-768px">Copyright © 2020 Glasses.All rights reserved.</span>
         <div>
-          <span class="color-fff me-48px">隱私權政策</span>
-          <spa class="color-fff">服務條款</span>
+          <span class="color-fff me-48px fs-16-768px mb-8-768px">隱私權政策</span>
+          <spa class="color-fff fs-16-768px mb-8-768px">服務條款</span>
         </div>
       </div>
     </div>
