--- a/hw4_vite/web-layout-training-vite-main/pages/faq.html
+++ b/hw4_vite/web-layout-training-vite-main/pages/faq.html
@@ -5,17 +5,54 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <title>contact</title>
 </head>
 
 <body>
   <%- include('./layout/header'); -%>
-
-
-    <h1 class="fs-48px roboto-regular">常見問題</h1>
-
+    <main class="container main-padding-y">
+      <h1 class="fs-48px roboto-regular mb-32px padding-x-768">常見問題</h1>
+      <p class="mb-24px fs-24px roboto-bold padding-x-768">我想詢問配鏡問題</p>
+      <section class="padding-x-768">
+        <ul>
+          <li class="mb-32px">
+            <h2 class="mb-8px roboto-bold fs-20px">Q1.請問可否自備鏡框單配鏡片？</h2>
+            <p class="col-12 col-lg-8 roboto-regular">A1.我牌鏡框搭配薄型非球面鏡片 1480 元，搭配功能型鏡片則依鏡片種類加價購買。 當日購買JINS盒裝眼鏡，搭配薄型非球面鏡片
+              980
+              元（隔日後則為 1480 元），搭配功能型鏡片則依鏡片種類加價購買。
+              他牌鏡框，搭配薄型非球面鏡片 1980 元，搭配功能型鏡片則依鏡片種類加價購買。</p>
+          </li>
+          <li class="mb-32px">
+            <h2 class="mb-8px roboto-bold fs-20px">Q2.眼鏡都可以20分鐘取件嗎？</h2>
+            <p class="col-12 col-lg-8 roboto-regular">A1.我牌鏡框搭配薄型非球面鏡片 1480 元，搭配功能型鏡片則依鏡片種類加價購買。 當日購買JINS盒裝眼鏡，搭配薄型非球面鏡片
+              980
+              元（隔日後則為 1480 元），搭配功能型鏡片則依鏡片種類加價購買。 他牌鏡框，搭配薄型非球面鏡片 1980 元，搭配功能型鏡片則依鏡片種類加價購買。</p>
+          </li>
+          <li class="mb-32px">
+            <h2 class="mb-8px roboto-bold fs-20px">Q3.散光鏡片需要額外加價嗎？</h2>
+            <p class="col-12 col-lg-8 roboto-regular">A1.我牌鏡框搭配薄型非球面鏡片 1480 元，搭配功能型鏡片則依鏡片種類加價購買。 當日購買JINS盒裝眼鏡，搭配薄型非球面鏡片
+              980
+              元（隔日後則為 1480 元），搭配功能型鏡片則依鏡片種類加價購買。 他牌鏡框，搭配薄型非球面鏡片 1980 元，搭配功能型鏡片則依鏡片種類加價購買。</p>
+          </li>
+          <li class="mb-32px">
+            <h2 class="mb-8px roboto-bold fs-20px">Q4.我可以使用舊眼鏡的度數配鏡片嗎？</h2>
+            <p class="col-12 col-lg-8 roboto-regular">A1.我牌鏡框搭配薄型非球面鏡片 1480 元，搭配功能型鏡片則依鏡片種類加價購買。 當日購買JINS盒裝眼鏡，搭配薄型非球面鏡片
+              980
+              元（隔日後則為 1480 元），搭配功能型鏡片則依鏡片種類加價購買。 他牌鏡框，搭配薄型非球面鏡片 1980 元，搭配功能型鏡片則依鏡片種類加價購買。</p>
+          </li>
+          <li>
+            <h2 class="mb-8px roboto-bold fs-20px">Q5.請問可以單購買鏡框嗎？</h2>
+            <p class="col-12 col-lg-8 roboto-regular">A1.我牌鏡框搭配薄型非球面鏡片 1480 元，搭配功能型鏡片則依鏡片種類加價購買。 當日購買JINS盒裝眼鏡，搭配薄型非球面鏡片
+              980
+              元（隔日後則為 1480 元），搭配功能型鏡片則依鏡片種類加價購買。 他牌鏡框，搭配薄型非球面鏡片 1980 元，搭配功能型鏡片則依鏡片種類加價購買。</p>
+          </li>
+        </ul>
+      </section>
+    </main>
 
 
 
