--- a/faq.html
+++ b/faq.html
@@ -18,13 +18,13 @@
   <nav class="bg-aa0601 navbar">
   <div class="container-768 container d-flex justify-content-between align-items-center flex-md-row flex-column">
     <div class="logo-padding">
-      <img class="logo" src="/2024webCutting/assets/logo-white-5423463a.png" alt="網站圖示">
+      <a href="index.html"><img class="logo" src="/2024webCutting/assets/logo-white-5423463a.png" alt="網站圖示"></a>
     </div>
     <ul class="nav-list p-0 mb-0 d-flex align-items-center color-fff m-0">
-      <li class="nav-item fs-20px">系列鏡框</li>
-      <li class="nav-item ms-64px fs-20px">門市據點</li>
-      <li class="nav-item ms-64px fs-20px">部落格</li>
-      <li class="nav-item ms-64px fs-20px">常見問題</li>
+      <li class="nav-item fs-20px"><a href="#">系列鏡框</a></li>
+      <li class="nav-item ms-64px fs-20px"><a href="#">門市據點</a></li>
+      <li class="nav-item ms-64px fs-20px"><a href="#">部落格</a></li>
+      <li class="nav-item ms-64px fs-20px"><a href="faq.html">常見問題</a></li>
     </ul>
   </div>
 </nav>    <main class="container main-padding-y">
