--- a/hw5/pages/index.html
+++ b/hw5/pages/index.html
@@ -13,7 +13,7 @@
 <body>
   <main class="container m-auto d-flex main">
     <aside class="aside-width">
-      <h1 class="logo">
+      <h1 class="logo d-flex mb-0">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="151" height="40"
           viewBox="0 0 151 40">
           <defs>
@@ -74,22 +74,39 @@
           <span class="text-grey lato-regular">Question</span>
         </li>
         <li class="d-flex align-items-center mb-26px">
-          <span class="material-symbols-outlined me-3">insert_chart</span>
-          <span class="text-grey lato-regular">Dashboard</span>
+          <span class="material-symbols-outlined me-3">assignment</span>
+          <span class="text-grey lato-regular">Assignment</span>
         </li>
         <li class="d-flex align-items-center mb-26px">
-          <span class="material-symbols-outlined me-3">insert_chart</span>
-          <span class="text-grey lato-regular">Dashboard</span>
+          <span class="material-symbols-outlined me-3">move_group</span>
+          <span class="text-grey lato-regular">Course</span>
+        </li>
+        <li class="d-flex align-items-center mb-26px">
+          <span class="material-symbols-outlined me-3">group</span>
+          <span class="text-grey lato-regular">Admin</span>
         </li>
         <li class="d-flex align-items-center">
-          <span class="material-symbols-outlined me-3">insert_chart</span>
-          <span class="text-grey lato-regular">Dashboard</span>
+          <span class="material-symbols-outlined me-3">settings</span>
+          <span class="text-grey lato-regular">Settings</span>
         </li>
       </ul>
     </aside>
     <section class="section-list flex-grow-1">
       <div class="container">
-
+        <header class="section-header-py">
+          <div class="d-flex align-items-center">
+            <h2 class="lato-bold fs-4 mb-0 me-48px">Admin</h2>
+            <span class="material-symbols-outlined me-2 add-icon-color">add</span>
+            <span class="lato-bold text-grey">Add New Admin</span>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">An item</li>
+            <li class="list-group-item">A second item</li>
+            <li class="list-group-item">A third item</li>
+            <li class="list-group-item">A fourth item</li>
+            <li class="list-group-item">And a fifth one</li>
+          </ul>
+        </header>
       </div>
     </section>
   </main>
