--- a/hw5/pages/index.html
+++ b/hw5/pages/index.html
@@ -93,19 +93,125 @@
     </aside>
     <section class="section-list flex-grow-1">
       <div class="container">
-        <header class="section-header-py">
-          <div class="d-flex align-items-center">
+        <header>
+          <div class="d-flex align-items-center section-header-py">
             <h2 class="lato-bold fs-4 mb-0 me-48px">Admin</h2>
             <span class="material-symbols-outlined me-2 add-icon-color">add</span>
             <span class="lato-bold text-grey">Add New Admin</span>
           </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">An item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
-            <li class="list-group-item">A fourth item</li>
-            <li class="list-group-item">And a fifth one</li>
-          </ul>
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Name</th>
+                <th scope="col">Email</th>
+                <th scope="col">Verified</th>
+                <th scope="col"></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">#1</th>
+                <td>Emir Wicks</td>
+                <td>emir.wicks@mail.com</td>
+                <td>Yes</td>
+                <td>
+                  <span class="material-symbols-outlined me-25px">visibility</span>
+                  <span class="material-symbols-outlined">edit</span>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">#2</th>
+                <td>Zaina Goldsmith</td>
+                <td>zaina.goldsmith@mail.com</td>
+                <td>Yes</td>
+                <td>
+                  <span class="material-symbols-outlined me-25px">visibility</span>
+                  <span class="material-symbols-outlined">edit</span>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">#3</th>
+                <td>Mahima Lopez</td>
+                <td>mahima.lopez@mail.com</td>
+                <td>Yes</td>
+                <td>
+                  <span class="material-symbols-outlined me-25px">visibility</span>
+                  <span class="material-symbols-outlined">edit</span>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">#4</th>
+                <td>Pharrell Murray</td>
+                <td>pharrell.murray@mail.com</td>
+                <td>Yes</td>
+                <td>
+                  <span class="material-symbols-outlined me-25px">visibility</span>
+                  <span class="material-symbols-outlined">edit</span>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">#5</th>
+                <td>Annika Mcbride</td>
+                <td>annika.mcbride@mail.com</td>
+                <td>Yes</td>
+                <td>
+                  <span class="material-symbols-outlined me-25px">visibility</span>
+                  <span class="material-symbols-outlined">edit</span>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">#6</th>
+                <td>Fatimah Clark</td>
+                <td>fatimah.clark@mail.com</td>
+                <td>Yes</td>
+                <td>
+                  <span class="material-symbols-outlined me-25px">visibility</span>
+                  <span class="material-symbols-outlined">edit</span>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">#7</th>
+                <td>Klaudia Rhodes</td>
+                <td>klaudia.rhodes@mail.com</td>
+                <td>Yes</td>
+                <td>
+                  <span class="material-symbols-outlined me-25px">visibility</span>
+                  <span class="material-symbols-outlined">edit</span>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">#8</th>
+                <td>Tillie Lucero</td>
+                <td>tillie.lucero@mail.com</td>
+                <td>Yes</td>
+                <td>
+                  <span class="material-symbols-outlined me-25px">visibility</span>
+                  <span class="material-symbols-outlined">edit</span>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">#9</th>
+                <td>abrina Stephenson</td>
+                <td>sabrina.stephenson@mail.com</td>
+                <td>Yes</td>
+                <td>
+                  <span class="material-symbols-outlined me-25px">visibility</span>
+                  <span class="material-symbols-outlined">edit</span>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">#10</th>                
+                <td>Annie Smith</td>
+                <td>annie.smith@mail.com</td>
+                <td>Yes</td>
+                <td>
+                  <span class="material-symbols-outlined me-25px">visibility</span>
+                  <span class="material-symbols-outlined">edit</span>
+                </td>
+              </tr>
+            </tbody>
+          </table>
         </header>
       </div>
     </section>
